[package]
name = "frost"
version = "0.1.0"
edition = "2021"

[dependencies]
frost-secp256k1 = "2.0.0"
rand = "0.8.5"
log = "0.4"
env_logger = "0.11"
bitcoin = "0.32"
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0.132"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
hex = "0.4.3"

[[bin]]
name = "frost"
path = "src/main.rs"
